Remove duplicate babel properties from webpack config, minor UI updates

--- a/src/components/PostCard.scss
+++ b/src/components/PostCard.scss
@@ -2,4 +2,14 @@
   border: 1px solid #eee;
   padding: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+  margin-top: 1rem;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  @media only screen and (min-width: 768px) {
+    margin-top: 0;
+  }
 }
